HADOOP-2765. Enables specifying ulimits for streaming/pipes tasks. Contributed by Amareshwari Sri Ramadasu and Devaraj Das.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/core/trunk@636044 13f79535-47bb-0310-9956-ffa450edef68